argocd/ingress/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: extensions-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.23.1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        livenessProbe:
          exec:
            command:
            - cat
            - non-existent-file
          initialDelaySeconds: 5
          periodSeconds: 180
