argocd/ingress/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-svc
  namespace: default
spec:
  selector:
    app: test
  ports:
    - name: http-port
      port: 80
      targetPort: http
