argocd/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    dummy: "test"
  name: some-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: guestbook-svc
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
