argocd/ingress/ingress_old.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: some-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: guestbook-ui
              servicePort: 80
            path: /*
